[cs-ui] CSIcon - Fix title not showing
Remove pointer-events: none; as it was preventing the title prop from showing. Add pointer-events: none; to various components where it is required. Fix some CSIconPreview errors

--- a/cs-ui-components/src/sass/components/_cs-icon.scss
+++ b/cs-ui-components/src/sass/components/_cs-icon.scss
@@ -1,5 +1,4 @@
 .cs-icon {
-	pointer-events: none;
 	height: var(--cs-icon-size, 1rem);
 	width: var(--cs-icon-size, 1rem);
 	min-width: var(--cs-icon-size, 1rem);
