--- a/cs-ui-components/src/sass/components/_cs-input-search.scss
+++ b/cs-ui-components/src/sass/components/_cs-input-search.scss
@@ -23,7 +23,7 @@
 		transform: translateY(60%);
 		display: block;
 		position: absolute;
-		cursor: pointer;
+		pointer-events: none;
 	}
 
 	.cs-input-search-clear {
