--- a/cs-ui-components/src/sass/components/_cs-lookup-field.scss
+++ b/cs-ui-components/src/sass/components/_cs-lookup-field.scss
@@ -22,7 +22,7 @@
 		transform: translateY(60%);
 		display: block;
 		position: absolute;
-		cursor: pointer;
+		pointer-events: none;
 		@include sf(--cs-input-icon-fill);
 	}
 
