--- a/cs-ui-components/src/sass/components/_cs-select.scss
+++ b/cs-ui-components/src/sass/components/_cs-select.scss
@@ -79,6 +79,7 @@
 			position: absolute;
 			right: 0.6125rem;
 			top: 0.6125rem;
+			pointer-events: none;
 		}
 	}
 }
